done with issue

--- a/#src/index.html
+++ b/#src/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.min.css">
-  <title>Test issue accordion</title>
+  <title>Magasin</title>
 </head>
 <body>
   
   @@include("_header.html")
-  @@include("_content.html")
+  @@include("_accordion.html")
   @@include("_footer.html")
 
   <script defer src="js/index.min.js" module></script>
